<resources>
    <string name="app_name">The Space App</string>
    <string name="launchpad">Launchpad</string>
    <string name="rocket">Rocket</string>
    <string name="payload">Payload</string>
    <string name="roadster_image">Roadster image</string>
    <string name="name">Name</string>
    <string name="launch_date">Launch date</string>
    <string name="speed">Speed</string>
    <string name="distance_from_earth">Distance from Earth</string>
    <string name="distance_from_mars">Distance from Mars</string>
    <string name="description">Description</string>
    <string name="tools_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="tools_distance">6423423424 km</string>
    <string name="tools_speed">3233 km/h</string>
    <string name="tools_launch_date">February 6, 2018</string>
    <string name="launches">Launches</string>
    <string name="capsules">Capsules</string>
    <string name="rockets">Rockets</string>
    <string name="roadster">Roadster</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="retry">Retry</string>
    <string name="article">Article</string>
    <string name="webcast">Webcast</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="first_launched">First launch: %1$s </string>
    <string name="swipe_to_refresh">Swipe to refresh</string>
    <string name="error_cloud_logo">Error cloud logo</string>
    <string name="size">Size</string>
    <string name="height_label">Height</string>
    <string name="height">%1$s m</string>
    <string name="size_meters">%1$s m</string>
    <string name="temp_degrees">%1$s °C</string>
    <string name="diameter_label">Diameter</string>
    <string name="diameter">%1$s m</string>
    <string name="mass_label">Mass</string>
    <string name="mass">%1$s kg</string>
    <string name="volume_cubic_meters">%1$s m³</string>
    <string name="first_stage_label">First stage</string>
    <string name="burn_time_label">Burn time</string>
    <string name="burn_time">%1$s s</string>
    <string name="engines_label">Engines</string>
    <string name="fuel_amount_tones_label">Fuel amount (Tones)</string>
    <string name="fuel_amount_tones">%1$s T</string>
    <string name="thrust_sea_level_label">Thrust at sea level</string>
    <string name="thrust_sea_level">%1$s kN</string>
    <string name="thrust_vacuum_label">Trust in vacuum</string>
    <string name="thrust_vacuum">%1$s kN</string>
    <string name="second_stage_label">Second stage</string>
    <string name="dragons">Dragons</string>
    <string name="speed_per_hour">%1$s km/h</string>
    <string name="distance">%1$s km</string>
    <string name="capsule">Capsule</string>
    <string name="starlink">Starlink</string>
    <string name="height_with_trunk">Height with trunk</string>
    <string name="active">Active</string>
    <string name="first_flight">First flight</string>
    <string name="info">Info</string>
    <string name="crew_capacity">Crew capacity</string>
    <string name="heat_shield">Heat shield</string>
    <string name="material">Material</string>
    <string name="temperature">Temperature</string>
    <string name="dev_partner">Dev partner</string>
    <string name="launch_mass">Launch mass</string>
    <string name="launch_volume">Launch volume</string>
    <string name="return_mass">Return mass</string>
    <string name="return_volume">Return volume</string>
    <string name="notification_title">Start of %1$s in 1 hour!</string>
    <string name="incoming_launch">Incoming launch</string>
    <string name="not_implemented">Not implemented yet :)</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="no_items_matching_the_query">No items matching the query</string>
    <string name="settings_content_description">Settings</string>
    <string name="coverage_angle">Coverage angle</string>
    <string name="show_coverage">Show coverage</string>
    <string name="starlink_start_degree_value">25</string>
    <string name="starlink_start_degree_text">25°</string>
    <string name="starlink_end_degree_value">40</string>
    <string name="starlink_end_degree_text">40°</string>
</resources>